--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,7 @@ valores*/
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 0px;
 }
 
 h1,
@@ -39,7 +40,7 @@ h1 {
     color: white;
     text-transform: none; /*Forma de las letras todo mayusculas o minisculas etc */
     text-decoration: dashed; /*Tipos de subrayados*/
-    margin: 100px 150px 70px 20px;
+    margin: 0;
 }
 
 h1 strong {
@@ -53,6 +54,12 @@ h1 strong {
     background-size: 500px 300px;
     background-repeat: no-repeat;
     background-position-x: right;
+    display: flex;
+    align-items: center;
+}
+
+.portfolio {
+    background: #fafafa;
 }
 
 .project {
@@ -65,7 +72,10 @@ h1 strong {
     border-style: solid; */
     border: 1px solid gray;
     border-radius: 10px;
+    margin: 10px;
     margin-bottom: 15px;
+    padding: 20px;
+    background: white;
 }
 
 .project-details {
@@ -75,9 +85,56 @@ h1 strong {
 .header {
     background-color: #1b2127;
     color: white;
+    display: flex;
+    height: 70px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+figure {
+    margin: 0;
 }
 
 .header a {
     color: white;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    height: inherit;
+    padding: 0 10px;
+}
+
+.menu {
+    height: inherit;
+}
+
+.header ol {
+    display: flex;
+    height: inherit;
+    align-items: center;
+}
+
+.header ol li {
+    height: inherit;
+    display: flex;
+    align-items: center;
+}
+
+.footer {
+    color: white;
+    background-color: #1b2127;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer img {
+    vertical-align: middle;
 }
