--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,6 +47,15 @@ h1 strong {
     color: #026fff;
 }
 
+h2 {
+    color: #026fff;
+    text-transform: uppercase;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
 .hero {
     height: 300px;
     background-image: url('https://udemy-images.udemy.com/course/750x422/643800_5937_2.jpg');
@@ -60,6 +69,8 @@ h1 strong {
 
 .portfolio {
     background: #fafafa;
+    padding: 20px;
+
 }
 
 .project {
@@ -72,10 +83,31 @@ h1 strong {
     border-style: solid; */
     border: 1px solid gray;
     border-radius: 10px;
-    margin: 10px;
     margin-bottom: 15px;
     padding: 20px;
     background: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.project-course,
+.project-date,
+.project-url {
+    margin: 10px, 0;
+}
+
+.project-description {
+    font-size: 20px;
+}
+
+.project strong {
+    font-family: 'Fjalla One', sans-serif;
+}
+.project-title {
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .project-details {
