--- a/css/estilos.css
+++ b/css/estilos.css
@@ -203,6 +203,15 @@ figure {
     border-radius: 5px;
 }
 
+.contact {
+    background-color: #056fff;
+    color: white;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .footer {
     color: white;
     background-color: #1b2127;
@@ -213,4 +222,59 @@ figure {
 
 .footer img {
     vertical-align: middle;
+}
+
+.social {
+    
+}
+
+.social-link {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    margin: 0 10px;
+    background-size: 50px 50px;
+}
+
+.social-link.twitter {
+    background-image: url('http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png');
+}
+
+.social-link.facebook {
+    background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/768px-Facebook_Home_logo_old.svg.png');
+}
+
+.social-link.github {
+    background-image: url('https://digitallabs.mmu.ac.uk/wp-content/uploads/2018/04/github_logo.png');
+}
+
+.social-link.instagram {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Feather-logos-instagram.svg/1024px-Feather-logos-instagram.svg.png');
+}
+
+.form-email input {
+    border-color: gray;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px 20px 10px 25px;
+    background-image: url('https://image.flaticon.com/icons/png/512/36/36175.png');
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: 5px;
+}
+
+.form-email button {
+    display: block;
+    margin-top: 10px;
+    background: transparent;
+    color: white;
+    padding: 10px 0;
+    border-radius: 5px;
+    width: 100px;
+    margin-top: 10px;
+}
+
+.form-email h3 {
+    font-family: 'Source Sans Pro', sans-serif;
 }
