Media Queries con flex-wrap

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,6 +66,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .hero-image {
@@ -93,6 +94,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .project-course,
@@ -125,6 +127,7 @@ h2 {
     height: 70px;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 ol,
@@ -148,7 +151,7 @@ figure {
 }
 
 .container {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     display: inherit;
     justify-content: inherit;
@@ -225,6 +228,7 @@ figure {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer {
@@ -233,6 +237,7 @@ figure {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer img {
@@ -305,5 +310,5 @@ figure {
 }
 
 @media screen and (max-width: 480px) {
-    
+
 }
