--- a/css/estilos.css
+++ b/css/estilos.css
@@ -152,6 +152,8 @@ figure {
 
 .container {
     max-width: 1000px;
+   /*  width: 100%; */
+    flex: 1;
     margin: 0 auto;
     display: inherit;
     justify-content: inherit;
@@ -303,9 +305,27 @@ figure {
 
 }
 
-@media screen and (max-width: 768px) {
-    body {
-        border:10px solid green;
+@media screen and (max-width: 767px) {
+    .header {
+        display: block;
+        height: auto;
+    }
+
+    .header ol {
+        display: initial;
+    }
+
+    .header ol li {
+        height: 50px;
+        text-align: center;
+    }
+
+    .header a {
+        justify-content: center;
+    }
+
+    .header .logo {
+        text-align: center;
     }
 }
 
