--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,7 +117,16 @@ h2 {
 }
 
 .project-details {
-    width: 500px;
+    width: 50%;
+}
+
+.project-imageContainer { 
+    width: 50%;
+}
+
+.project-imageContainer img{
+    max-width: 100%;
+
 }
 
 .header {
@@ -300,6 +309,10 @@ figure {
 .form-email h3 {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+img {
+    max-width: 100%;
+}
 /*Desktop first es mejor empezar por el media querie mas grande*/
 @media screen and (max-width: 1024px) {
 
@@ -327,8 +340,50 @@ figure {
     .header .logo {
         text-align: center;
     }
+
+    .project {
+        display: block;
+    }
+
+    .project-imageContainer {
+        width: auto;
+        text-align: center;
+    }
+
+    .project-details {
+        width: auto;
+        font-size: 16px;
+    }
+
+    .project-course, .project-date, .project-url {
+        margin: .3em 0;
+    }
+
+    .project-title {
+        font-size: 1.5em;
+        margin-bottom: .3em;
+    }
+
+    .project-url {
+        font-size: 1em;
+    }
+
+    .project-course {
+        font-size: .7em;
+    }
+
+    .project-date {
+        font-size: 1em;
+    }
+
+    .project-description {
+        font-size: .8em;
+    }
 }
 
 @media screen and (max-width: 480px) {
-
+    .project-details {
+        width: auto;
+        font-size: 12px;
+    }
 }
